# transaction-service

./: .dockerignore  .flake8  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  alembic_compose.ini  alembic_kube.ini  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
alembic/: env.py
alembic/versions/: 4e7f4a00d63f_user_username_unique_true.py  64ddda32cf3e_create_schema.py  8cda27dbeef5_create_schema2.py  e1369f771946_add_user_vector.py  edda5aa91752_added_tables.py
db/: advanced_schema.txt  db_schema.txt  queries.sql
kuzora-transaction/: Chart.yaml  values.yaml
kuzora-transaction/templates/: configMap.yaml  deployment.yaml  job.yaml  service.yaml
kuzora-transaction/values/: test.yaml
manifests/: configMap.yml  deployment.yml  job.yml  service.yml
src/app/: __init__.py  in_memory_repository.py  main.py  service.py
src/app/api/: handlers.py
src/app/api/healthz/: __init__.py  handlers.py
src/app/core/: __init__.py  config.py  errors.py  interfaces.py  models.py  transactions.py
src/app/metrics/: __init__.py  tracing.py
src/config/: config-compose.yml  config-kube.yml  config-local.yml
src/tests/: __init__.py  test_main.py
src/tests/integration/: __init__.py  conftest.py  test_handlers.py  test_service.py  test_service_in_mem_repo.py  test_transactions.py
src/tests/unit/: __init__.py  test_service.py
src/tests/unit/core/: __init__.py  conftest.py  test_config.py  test_handlers.py  test_models.py  test_transactions.py
