[tool.poetry]
name = "transaction-service"
version = "0.1.0"
description = ""
authors = ["Georgiy Kuzora <georgiy@kuzora.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.19.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
